--- a/src/MinesweeperSolver.GameSimulator.Tests/MinesweeperSolver.GameSimulator.Tests.csproj
+++ b/src/MinesweeperSolver.GameSimulator.Tests/MinesweeperSolver.GameSimulator.Tests.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoardTests.cs" />
     <Compile Include="MineGeneratorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
