--- a/src/MinesweeperSolver.GameSimulator.Tests/MinesweeperSolver.GameSimulator.Tests.csproj
+++ b/src/MinesweeperSolver.GameSimulator.Tests/MinesweeperSolver.GameSimulator.Tests.csproj
@@ -60,7 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoardTests.cs" />
-    <Compile Include="MineGeneratorTests.cs" />
+    <Compile Include="BoardGeneratorServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
