Extracted after open action to view part.

--- a/src/Hosts/MinesweeperSolver.DesctopApplication/MinesweeperSolver.DesctopApplication.csproj
+++ b/src/Hosts/MinesweeperSolver.DesctopApplication/MinesweeperSolver.DesctopApplication.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\BoardViewModel.cs" />
     <Compile Include="ViewModels\GameProgress.cs" />
     <Compile Include="ViewModels\TileViewModel.cs" />
     <Page Include="MainWindow.xaml">
