--- a/src/MinesweeperSolver.NeuralSolver/packages.config
+++ b/src/MinesweeperSolver.NeuralSolver/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Accord" version="3.8.0" targetFramework="net462" />
   <package id="Accord.Genetic" version="3.8.0" targetFramework="net462" />
+  <package id="Accord.MachineLearning" version="3.8.0" targetFramework="net462" />
   <package id="Accord.Math" version="3.8.0" targetFramework="net462" />
   <package id="Accord.Neuro" version="3.8.0" targetFramework="net462" />
   <package id="Accord.Statistics" version="3.8.0" targetFramework="net462" />
