Adding more statistics

--- a/src/MinesweeperSolver.NeuralSolver/MinesweeperSolver.NeuralSolver.csproj
+++ b/src/MinesweeperSolver.NeuralSolver/MinesweeperSolver.NeuralSolver.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NetworkBuilder.cs" />
+    <Compile Include="PlayStatistics.cs" />
     <Compile Include="ScoredNetwork.cs" />
     <Compile Include="SolverNet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
